gccida/g3/lookup_filename
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12247:41: error: use of undeclared identifier 'a'
if ( strcmp( file_name, ( const char *)&a.dw_attr_val.val_class + 3) ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12251:21: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
last_lookup_index = file_table_0.last_lookup_index; 
                    ^~~~~~~~~~~~
                    file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12252:9: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
table = file_table_0.table; 
        ^~~~~~~~~~~~
        file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12253:60: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                           ^~~~~~~~~~~~
                                                           file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12253:79: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
                                                                              ^~~~~~~~~~~~
                                                                              file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12253:7: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( !file_table_0.last_lookup_index || strcmp( file_name, file_table_0.table[file_table_0.last_lookup_index]) ) 
      ^~~~~~~~~~~~
      file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12255:10: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
in_use = file_table_0.in_use; 
         ^~~~~~~~~~~~
         file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12256:6: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( file_table_0.in_use <= 1 ) 
     ^~~~~~~~~~~~
     file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12269:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = last_lookup_index; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12280:27: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
if ( last_lookup_index == file_table_0.allocated ) 
                          ^~~~~~~~~~~~
                          file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12282:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.allocated = last_lookup_index + 64; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12283:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xrealloc( table, 8LL * ( last_lookup_index + 64)); 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12284:9: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
table = file_table_0.table; 
        ^~~~~~~~~~~~
        file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12287:14: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
*( _QWORD *)&file_table_0.in_use = _mm_unpacklo_epi32( 
             ^~~~~~~~~~~~
             file_table
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12289:39: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
_mm_cvtsi32_si128( last_lookup_index)).m128i_u64[0]; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/dwarf2out.c:12290:40: error: use of undeclared identifier 'a'
fprintf( asm_out_file, ( const char *)&a.dw_attr_val.v.val_unsigned + 6, last_lookup_index, file_name); 
                                       ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/lookup_filename/src/obj/dwarf2out.o] Error 1
